--- a/width-space-lower-bound.tex
+++ b/width-space-lower-bound.tex
@@ -22,6 +22,10 @@
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{cancel}
+\usepackage{bussproofs}
+\usepackage{proof}
+
+\newcommand {\nconf}[1]{\operatorname{neg}({#1})}
 
 \title[space vs. width in resolution]
 {Small space in resolution calculus implies small width
@@ -201,12 +205,166 @@ Humboldt University of Berlin\\ % Your institution for the title page
 	\end{center}}
 \end{frame}
 
-\begin{frame}\frametitle{Theorem~3.1 - Formal proof}
-	define neg(C) and tell the meaning of it  (state both def and prep.)
+\begin{frame}\frametitle{Theorem~3.1 Proof sketch}
+	\begin{block} {Negated configuration ($\nconf{\mathbb{C}}$)}
+		$\nconf{\mathbb{C}}$ of a clause configuration $\mathbb{C}$ is recursively defined
+		as follows:
+		\vspace{-.3cm}
+		\pause
+		\begin{alignat*}{3}
+			&\nconf{\emptyset} = \{\bot\}&&\\
+			%
+			\uncover<3->{
+			&\nconf{\mathbb{C} \cup \{C\}} =&& \{\underbrace{D \lor \overline a | D \in
+					\nconf{\mathbb{C}}; a \in C \setminus D }_{(*)};\\
+			& &&\underbrace{\not \exists B \in \nconf{\mathbb{C}} s.t. B \lor \overline a \not
+	\subseteq D \lor \overline a}_{(**)}\}.}
+		\end{alignat*}
+	\end{block}
+	\pause 
+	\pause
+	\begin{itemize}[<+->]
+		\item The part $(*)$ represents one clause of $\nconf{\mathbb{C}}$ as seen in the
+			previous example (due to distributivity of $\lor$).
+		\item The part $(**)$ ensures the minimality (inclusion wise) of the clauses and
+			hence no trivial or subsummed clauses are contained in $\nconf{\mathbb{C}}$.
+	\end{itemize}
+\end{frame}
 
-	discuss what happens in case of axiom download
+\begin{frame}\frametitle{Theorem~3.1. Proof sketch (Cont.)}
+	\begin{block}{Observation~3.3.}
+		The width of any clause in the negated configuration $\nconf{\mathbb{C}}$ is at most
+		$Sp(\mathbb{C}_t) = |\mathbb{C}|$.
+	\end{block}
+	\pause
+	\only<2>{ \noindent Proof sketch. Each clause in $\mathbb{C}$ contributes at most one literals to
+	each clause inthe negated configuration.\hfill $\square$}
+	\pause
+	\begin{block}{Proposition~3.4.}
+		The negated configuration $\nconf{\mathbb{C}}$ is the set of all minimal
+		(nontrivial) clauses $C$ such that $\lnot C$ implies the configuration $\mathbb{C}$.
+		That is,
+		\vspace{-.3cm}
+		$$\nconf{\mathbb{C}} = \{C|\lnot C \models \mathbb{C} \text{ and for every } C' \not
+		\subseteq C \text{ it holds that } \lnot C' \not \models \mathbb{C}.\}$$
+	\end{block}
+	\pause
+	\only<4>{ \noindent Proof Idea. Let $\mathbb{D}$ be the set of minimal clauses whose complements imply
+	$\mathbb{C}$. Show that for $C \in \nconf{\mathbb{C}}$ there is a $C' \in \mathbb{D}$ such
+	that $C' \subseteq C$ and vise versa. Since both sets contain only minimal clauses, the
+	claim follows.}
+	\pause
+	\only<5->{ \begin{block}{Observatoin~3.5.}
+		An assignment satisfies a clause configuration $\mathbb{C}$ if and only if it
+		falsifies the negated clause configuration $\nconf{\mathbb{C}}$. That is,
+		$\mathbb{C}$ is logically equivalent to $\lnot \nconf{\mathbb{C}}$.
+	\end{block}}
+\end{frame}
+\begin{frame}\frametitle{Theorem 3.1. Proof sketch (Cont. 2)}
+	\begin{block}{Lemma~3.6.}
+		If $\mathbb{C} \models \mathbb{C}'$, then for every clause $C \in
+		\nconf{\mathbb{C}}$ there exists a clause $C' \in \nconf{\mathbb{C}'}$ such that $C$
+		is a weakening of $C'$.
+	\end{block}
+	Remark. This ensures that erasure and inference steps do not increase the width of the
+	refutation.
+	\pause
+	\begin{itemize}[<+->]
+		\item Let $\pi = (\mathbb{C}_0, \mathbb{C}_1, \dots \mathbb{C}_{\tau})$.
+		\item Let $\pi' = (\mathbb{D}_{\tau}, \dots, \mathbb{D}_0), \mathbb{D}_i =
+			\nconf{\mathbb{C}_i}$.
+		\item $\bot \in \mathbb{D}_0$ and $\mathbb{D}_{\tau} = \emptyset$.
+		\item {\color{red}Assume} for now that $k \geq 3$.
+		\item If $\mathbb{C}_{t-1} \models \mathbb{C}_{t}$ (Lemma~3.6.),
+		\item[] \hspace{.5cm} $\implies$  $\mathbb{D}_{t-1}$ is a weakening of $\mathbb{D}_t$.
+		\item Interesting case: $\mathbb{C}_{t-1} \not \models \mathbb{C}_{t}$
+		\item[] \hspace{.5cm} ($\implies$ Axiom Download at step $t$).
+	\end{itemize}
+\end{frame}
 
-	prove the theorem (maximal two extra frames)
+\begin{frame}\frametitle{Theorem 3.1. Proof sketch (Cont. 3)}
+	\begin{block}{Claim.}
+		If $\mathbb{C}_t$ results from $\mathbb{C}_{t-1}$ through an axiom-download step, it
+		follows that $W(\mathbb{D}_t \vdash \mathbb{D}_{t-1}) \leq s + k - 3$.
+	\end{block}
+	\pause
+	\begin{minipage}[t]{0.6\linewidth}
+	\begin{itemize}[<+->]
+		\item Assume $Sp(\mathbb{C}_{t-1}) \leq s - 2$. \textbf{(Why?)}
+		\item Let $\mathbb{C}_t = \mathbb{C}_{t-1} \cup A$,\\
+			$A = \{a_1, \dots a_{\ell}\} \in F, \ell \leq k$.
+		\item Choose $C \in \mathbb{D}_{t-1} \setminus \mathbb{D}_t$, (Obs. 3.3).
+		\item[] $W(C) \leq Sp(\mathbb{C}_{t-1}) \leq s-2$ 
+		\item First download $A$ then derive $C$\\
+			from $\mathbb{D}_{t} \cup \{A\}$ as follows.
+		\item Note that each $C \lor \overline a_i$ is\\
+			in or a weakening of a clause in $\mathbb{C}_t$.
+	\end{itemize}
+	\end{minipage}%
+	\hfill%
+	\begin{minipage}[t]{0.39\linewidth}
+		\pause
+	$$
+	\resizebox{\hsize}{!}{%
+	\infer{C}{
+	%
+		\infer{\begin{aligned}C \lor a_3 \lor& \dots \lor a_{\ell}\\ &\vdots\\ C &\lor
+		a_{\ell} \end{aligned}}
+		{
+			\infer{C \lor a_2 \lor \dots \lor a_{\ell}}
+			{A & C\lor \overline a_1}
+		     	&C \lor \overline a_2
+		}
+	%
+	%
+	& \begin{aligned}\vphantom{A}\\ \vphantom{\vdots}\\ C \lor \overline
+	a_{\ell}\end{aligned}}%
+	}
+	$$
+	\end{minipage}
+\end{frame}
+
+\begin{frame}\frametitle{Theorem 3.1. Proof sketch - Analysis}
+	\noindent%
+	\begin{minipage}[t]{.67\linewidth}
+	\begin{itemize}[<+->]
+		\item If $C = \emptyset$, the width bounded by $W(A) \leq k$.
+		\item Else, the width is bounded by\\
+			\hspace{1cm}$W(C) + W(A) - 1 \leq s + k - 3$.
+	\end{itemize}
+	\end{minipage}%
+	\hfill%
+	\begin{minipage}[t]{0.3\linewidth}
+	$$
+	\resizebox{\hsize}{!}{%
+	\infer{C}{
+	%
+		\infer{\begin{aligned}C \lor a_3 \lor& \dots \lor a_{\ell}\\ &\vdots\\ C &\lor
+		a_{\ell} \end{aligned}}
+		{
+			\infer{C \lor a_2 \lor \dots \lor a_{\ell}}
+			{A & C\lor \overline a_1}
+		     	&C \lor \overline a_2
+		}
+	%
+	%
+	& \begin{aligned}\vphantom{A}\\ \vphantom{\vdots}\\ C \lor \overline
+	a_{\ell}\end{aligned}}%
+	}
+	$$
+	\end{minipage}
+
+	\begin{center}%
+		\uncover<3->{What if {\color{red} $k < 3$}?}%
+	\end{center}%
+	\pause
+	\uncover<4->{
+		\begin{itemize}[<+->]
+			\item Remove all weakening steps (inference and erasure).
+			\item Make sure that the resulting refutation $\pi''$ is is still valid.
+			\item Width is now $\max \{k, s+k-3\} = s+k-3$.
+		\end{itemize}
+	}
 \end{frame}
 
 \begin{frame}\frametitle{Generalization to r-DNF resolution}
