--- a/width-space-lower-bound.tex
+++ b/width-space-lower-bound.tex
@@ -304,7 +304,7 @@ Humboldt University of Berlin\\ % Your institution for the title page
 	\end{minipage}%
 	\hfill%
 	\begin{minipage}[t]{0.39\linewidth}
-		\pause
+	\pause
 	$$
 	\resizebox{\hsize}{!}{%
 	\infer{C}{
@@ -361,7 +361,7 @@ Humboldt University of Berlin\\ % Your institution for the title page
 	\pause
 	\uncover<4->{
 		\begin{itemize}[<+->]
-			\item $s \geq s + k - 3$.
+			\item $s \geq s + k - 3$. Problem!
 			\item Remove all weakening steps (inference and erasure).
 			\item Make sure that the resulting refutation $\pi''$ is is still valid.
 			\item Width is now $\max \{k, s+k-3\} = s+k-3$.
